fix table formatting

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -103,51 +103,51 @@ All props below are optional.
   rows={[
     {
       cells: [
-        "appearance",
-        "object",
-        "Controls the overall look and feel of the component. See <a href="/docs/components/ui/appearanc">Appearance</a> for more information.",
+        <code>appearance</code>,
+        <code>object</code>,
+        <>Controls the overall look and feel of the component. See <a href="/docs/components/ui/appearance">Appearance</a> for more information.</>,
       ]
     },
     {
       cells: [
-        "routing",
-        "string",
-        `The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.`,
+        <code>routing</code>,
+        <code>string</code>,
+        <>The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.</>,
       ],
     },
     {
       cells: [
-        "path",
-        "string",
-        "The path where the component is mounted on when path-based routing is used e.g. /sign-up.",
+        <code>path</code>,
+        <code>string</code>,
+        <>The path where the component is mounted on when path-based routing is used e.g. /sign-up.</>,
       ],
     },
     {
       cells: [
-        "redirectUrl",
-        "string",
-        "Full URL or path to navigate to after successful sign in or sign up.\nThe same as setting afterSignInUrl and afterSignUpUrl to the same value.",
+        <code>redirectUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate to after successful sign in or sign up.\nThe same as setting afterSignInUrl and afterSignUpUrl to the same value.</>,
       ],
     },
     {
       cells: [
-        "afterSignInUrl",
-        "string",
-        "The full URL or path to navigate to after a successful sign in.",
+        <code>afterSignInUrl</code>,
+        <code>string</code>,
+        <>The full URL or path to navigate to after a successful sign in.</>,
       ],
     },
     {
       cells: [
-        "signInUrl",
-        "string",
-        "Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered.",
+        <code>signInUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to the sign in page. Use this property to provide the target of the 'Sign In' link that's rendered.</>,
       ],
     },
     {
       cells: [
-        "afterSignUpUrl",
-        "string",
-        "The full URL or path to navigate after a successful sign up.",
+        <code>afterSignUpUrl</code>,
+        <code>string</code>,
+        <>The full URL or path to navigate after a successful sign up.</>,
       ],
     },
   ]}
