--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -87,14 +87,14 @@ All props below are optional.
       cells: [
         <code>afterCreateOrganizationUrl</code>,
         <code>string</code>,
-        "Full URL or path to navigate after creating a new organization.",
+        <>Full URL or path to navigate after creating a new organization.</>,
       ],
     },
     {
       cells: [
         <code>appearance</code>,
         <code>object</code>,
-        "Control the look and feel of the component.",
+        <>Control the look and feel of the component.</>,
       ],
     },
     {
@@ -117,8 +117,8 @@ All props below are optional.
         <code>'modal' | 'navigation'</code>,
         <>
           Controls whether clicking the "Create organization" button will cause
-          the <code>CreateOrganization</code> component to open as a modal, or if the browser will navigate
-          to the <code>createOrganizationUrl</code> where <code>CreateOrganization</code> is mounted as a page.
+          the <code>{"<CreateOrganization />"}</code> component to open as a modal, or if the browser will navigate
+          to the <code>createOrganizationUrl</code> where <code>{"<CreateOrganization />"}</code> is mounted as a page.
           <br/>
           Defaults to: <code>"modal"</code>
         </>,
@@ -130,8 +130,8 @@ All props below are optional.
         <code>'modal' | 'navigation'</code>,
         <>
           Controls whether clicking the "Manage organization" button will cause
-          the <code>OrganizationProfile</code> component to open as a modal, or if the browser will navigate
-          to the <code>organizationProfileUrl</code> where <code>OrganizationProfile</code> is mounted as a page.
+          the <code>{"<OrganizationProfile />"}</code> component to open as a modal, or if the browser will navigate
+          to the <code>organizationProfileUrl</code> where <code>{"<OrganizationProfile />"}</code> is mounted as a page.
           <br/>
           Defaults to: <code>"modal"</code>
         </>,
@@ -157,7 +157,7 @@ All props below are optional.
         <code>boolean</code>,
         <>
           By default, users can switch between organization and their personal account.
-          This option controls whether OrganizationSwitcher will include the user's personal account
+          This option controls whether <code>{"<OrganizationSwitcher />"}</code> will include the user's personal account
           in the organization list. Setting this to `false` will hide the personal account entry,
           and users will only be able to switch between organizations.
           <br/>
@@ -170,7 +170,7 @@ All props below are optional.
       cells: [
         <code>defaultOpen</code>,
         <code>boolean</code>,
-        <>Controls the default state of the <code>OrganizationSwitcher</code></>,
+        <>Controls the default state of the <code>{"<OrganizationSwitcher />"}</code></>,
       ],
     },
   ]}
