--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -204,75 +204,79 @@ All props below are optional.
   headings={["Name", "Type", "Description"]}
   headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
-  {
-  cells: [<code>appearance</code>, <code>object</code>, `Controls the overall look and feel.`],
-  },
-  {
-  cells: [
-  <code>showName</code>,
-  <code>string</code>,
-  `Controls if the user name is displayed next to the user image button.`,
-  ],
-  },
-  {
-  cells: [
-  <code>signInUrl</code>,
-  <code>string</code>,
-  `The full URL or path to navigate to when the "Add another account" button is clicked.`,
-  ],
-  },
-  {
-  cells: [
-  <code>userProfileMode</code>,
-  <code>"modal" | "navigation"</code>,
-  <>Controls whether clicking the "Manage your account" button will cause the <code>UserProfile</code> component to open as a modal, or if the browser will navigate to the <code>userProfileUrl</code> where <code>UserProfile</code> is mounted as a page.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>userProfileUrl</code>,
-  <code>string</code>,
-  `The full URL or path leading to the user management interface.`,
-  ],
-  },
-  {
-  cells: [
-  <code>afterSignOutUrl</code>,
-  <code>string</code>,
-  "The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps)",
-  ],
-  },
-  {
-  cells: [
-  <code>afterMultiSessionSingleSignOutUrl</code>,
-  <code>string</code>,
-  "The full URL or path to navigate to after a signing out from currently active account (multisession apps).",
-  ],
-  },
-  {
-  cells: [
-  <code>afterSwitchSessionUrl</code>,
-  <code>string</code>,
-  "Full URL or path to navigate to after a successful account change (multi-session apps).",
-  ],
-  },
-  {
-  cells: [
-  <code>defaultOpen</code>,
-  <code>string</code>,
-  <>Controls whether the <code>{"<UserButton/>"}</code> should open by default during the first render.</>,
-  ],
-  },
-  {
-  cells: [
-  <code>userProfileProps</code>,
-  <code>object</code>,
-  <>
-  Specify options for the underlying <code>{"<UserProfile />"}</code> component.
-  <br/>
-  e.g. <code>{"{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}"}</code>
-  </>,
-  ],
-  },
+    {
+    cells: [
+      <code>appearance</code>, 
+      <code>object</code>,
+      <>Controls the overall look and feel.</>
+    ],
+    },
+    {
+      cells: [
+        <code>showName</code>,
+        <code>string</code>,
+        <>Controls if the user name is displayed next to the user image button.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>signInUrl</code>,
+        <code>string</code>,
+        <>The full URL or path to navigate to when the "Add another account" button is clicked.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>userProfileMode</code>,
+        <code>"modal" | "navigation"</code>,
+        <>Controls whether clicking the "Manage your account" button will cause the <code>UserProfile</code> component to open as a modal, or if the browser will navigate to the <code>userProfileUrl</code> where <code>UserProfile</code> is mounted as a page.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>userProfileUrl</code>,
+        <code>string</code>,
+        <>The full URL or path leading to the user management interface.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignOutUrl</code>,
+        <code>string</code>,
+        <>The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps)</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterMultiSessionSingleSignOutUrl</code>,
+        <code>string</code>,
+        <>The full URL or path to navigate to after a signing out from currently active account (multisession apps).</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSwitchSessionUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate to after a successful account change (multi-session apps).</>,
+      ],
+    },
+    {
+      cells: [
+        <code>defaultOpen</code>,
+        <code>string</code>,
+        <>Controls whether the <code>{"<UserButton />"}</code> should open by default during the first render.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>userProfileProps</code>,
+        <code>object</code>,
+        <>
+          Specify options for the underlying <code>{"<UserProfile />"}</code> component.
+          <br/>
+          e.g. <code>{"{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}"}</code>
+        </>,
+      ],
+    },
   ]}
 />
