--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -77,15 +77,22 @@ All props below are optional.
   headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
     {
-      cells: [<code>appearance</code>, <code>object</code>, `Controls the overall look and feel.`],
+      cells: [
+        <code>appearance</code>, 
+        <code>object</code>, 
+        <>Controls the overall look and feel.</>
+      ],
     },
     {
       cells: [
         <code>routing</code>,
         <code>RoutingStrategy</code>,
-        `The routing strategy for your pages. Supported values are:
-- Hash (default): Hash based routing.
-- Path: Path based routing.`,
+        <>The routing strategy for your pages. Supported values are:
+          <ul>
+            <li>Hash (default): Hash based routing.</li>
+            <li>Path: Path based routing.</li>
+          </ul>
+        </>,
       ],
     },
     {
