--- a/docs/references/nextjs/authentication-object.mdx
+++ b/docs/references/nextjs/authentication-object.mdx
@@ -11,45 +11,66 @@ description:
   headings={["Name", "Description"]}
   headingsMeta={[{}, {maxWidth:'300px'}]}
   rows={[
-  {
-  cells: [
-  "actor",
-  "Holds identifier for the user that is impersonating the current user",
-  ],
-  },
-  {
-  cells: [
-  "debug",
-  "Used to help debug issues when using Clerk in development",
-  ],
-  },
-  {
-  cells: [
-  "getToken",
-  "A function that returns a promise that resolves to the current user's session token; can also be used to retrieve a custom JWT template",
-  ],
-  },
-  {
-  cells: ["orgId", "The current user's organization ID"],
-  },
-  {
-  cells: ["orgRole", "The current user's organization role"],
-  },
-  {
-  cells: ["orgSlug", "The current user's organization slug"],
-  },
-  {
-  cells: ["organization", "The current user's organization object"],
-  },
-  {
-  cells: ["sessionClaim", " The current user's session claim"],
-  },
-  {
-  cells: ["sessionId", "The current user's session ID"],
-  },
-  {
-  cells: ["userId", "The current user's unique identifier"],
-  },
+    {
+      cells: [
+        <code>actor</code>,
+        <>Holds identifier for the user that is impersonating the current user</>,
+      ],
+    },
+    {
+      cells: [
+        <code>debug</code>,
+        <>Used to help debug issues when using Clerk in development</>,
+      ],
+    },
+    {
+      cells: [
+        <code>getToken</code>,
+        <>A function that returns a promise that resolves to the current user's session token; can also be used to retrieve a custom JWT template</>,
+      ],
+    },
+    {
+      cells: [
+        <code>orgId</code>, 
+        <>The current user's organization ID</>
+      ],
+    },
+    {
+      cells: [
+          <code>orgRole</code>, 
+          <>The current user's organization role</>
+        ],
+    },
+    {
+      cells: [
+          <code>orgSlug</code>, 
+          <>The current user's organization slug</code>
+        ],
+    },
+    {
+      cells: [
+          <code>organization</code>,
+          <>The current user's organization object</code>
+        ],
+    },
+    {
+      cells: [
+          <code>sessionClaim</code>, 
+          <>The current user's session claim</code>
+        ],
+    },
+    {
+      cells: [
+          <code>sessionId</code>, 
+          <>The current user's session ID</>
+        ],
+    },
+    {
+      cells: [
+          <code>userId</code>, 
+          <>The current user's unique identifier</>
+        ],
+    },
   ]}
 />
 
