--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -76,31 +76,34 @@ All props below are optional.
       cells: [
         <code>afterLeaveOrganizationUrl</code>,
         <code>string</code>,
-        "Full URL or path to navigate after leaving an organization.",
+        <>Full URL or path to navigate after leaving an organization.</>,
       ],
     },
     {
       cells: [
         <code>path</code>,
         <code>string</code>,
-        "The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.",
+        <>The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.</>,
       ],
     },
     {
       cells: [
         <code>routing</code>,
         <code>RoutingStrategy</code>,
-        `The routing strategy for your pages. Supported values are:
-        - hash (default): Hash based routing.
-        - path: Path based routing.
-        - virtual: Virtual based routing.`,
+        <>The routing strategy for your pages. Supported values are:
+          <ul>
+            <li>hash (default): Hash based routing.</li>
+            <li>path: Path based routing.</li>
+            <li>virtual: Virtual based routing.</li>
+          </ul>
+        </>,
       ],
     },
     {
       cells: [
         <code>appearance</code>,
         <code>object</code>,
-        "Control the look and feel of the component.",
+        <>Control the look and feel of the component.</>,
       ],
     },
   ]}
