--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -187,17 +187,23 @@ You can create a custom button by wrapping your own button, or button text, in t
   rows={[
     {
       cells: [
-        "signOutCallback?", "() => (void | Promise<any>)", "A promise to handle after the sign out has successfully happened." 
+        <code>signOutCallback?</code>, 
+        <code>{`() => (void | Promise<any>)`}</code>, 
+        <>A promise to handle after the sign out has successfully happened.</> 
       ]
     },
     {
       cells: [
-        "children?", "React.ReactNode", "children you want to wrap the sign out button in."
+        <code>children?</code>, 
+        <code>React.ReactNode</code>, 
+        <>children you want to wrap the sign out button in.</>
       ]
     },
     {
       cells: [
-        "signOutOptions?", "SignOutOptions", "Object that current has a `sessionId` property. The `sessionId` can be passed in to sign out a specific session, which is useful for multisession applications."
+        <code>signOutOptions?</code>, 
+        <code>SignOutOptions</code>, 
+        <>Object that current has a <code>sessionId</code> property. The <code>sessionId</code> can be passed in to sign out a specific session, which is useful for multisession applications.</>
       ]
     }
   ]}
