fixing multiple bugs

--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -113,7 +113,13 @@ All props below are optional.
       cells: [
         <code>routing<code>,
         <code>string<code>,
-        <>The routing strategy for your pages. \nSupported values are: \n - hash (default): Hash-based routing. \n - path: Path-based routing. \n - virtual: Virtual-based routing.</>,
+        <>The routing strategy for your pages. Supported values are: 
+          <ul>
+            <li>hash (default): Hash-based routing.</li>
+            <li>path: Path-based routing.</li>
+            <li>virtual: Virtual-based routing</li>
+          </ul>
+        </>,
       ],
     },
     {
@@ -127,7 +133,8 @@ All props below are optional.
       cells: [
         <code>redirectUrl</code>,
         <code>string</code>,
-        <>Full URL or path to navigate to after successful sign in or sign up.\nThe same as setting afterSignInUrl and afterSignUpUrl to the same value.</>,
+        <>Full URL or path to navigate to after successful sign in or sign up.
+        <br/>The same as setting afterSignInUrl and afterSignUpUrl to the same value.</>,
       ],
     },
     {
