--- a/docs/components/organization/organization-profile.mdx
+++ b/docs/components/organization/organization-profile.mdx
@@ -62,7 +62,7 @@ The `<OrganizationProfile />` component is used to render a beautiful, full-feat
     }
     ```
   </Tab>
-<Tabs>
+</Tabs>
 
 ## Props
 
