--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -132,8 +132,7 @@ All props below are optional.
           Controls whether clicking the "Manage organization" button will cause
           the <code>{"<OrganizationProfile />"}</code> component to open as a modal, or if the browser will navigate
           to the <code>organizationProfileUrl</code> where <code>{"<OrganizationProfile />"}</code> is mounted as a page.
-          <br/>
-          Defaults to: <code>"modal"</code>
+          <br/>Defaults to: <code>"modal"</code>
         </>,
       ],
     },
@@ -158,10 +157,9 @@ All props below are optional.
         <>
           By default, users can switch between organization and their personal account.
           This option controls whether <code>{"<OrganizationSwitcher />"}</code> will include the user's personal account
-          in the organization list. Setting this to `false` will hide the personal account entry,
+          in the organization list. Setting this to <code>false</code> will hide the personal account entry,
           and users will only be able to switch between organizations.
-          <br/>
-          Defaults to: <code>true</code>
+          <br/>Defaults to: <code>true</code>
         </>,
       ],
     },
