--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -90,7 +90,7 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
 
 #### Custom Usage
 
-You can create a custom button by wrapping your own button, or button text, in the <SignOutButton /> component.
+You can create a custom button by wrapping your own button, or button text, in the `<SignOutButton />` component.
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
   <Tab>
