--- a/docs/references/nextjs/authentication-object.mdx
+++ b/docs/references/nextjs/authentication-object.mdx
@@ -44,19 +44,19 @@ description:
     {
       cells: [
           <code>orgSlug</code>, 
-          <>The current user's organization slug</code>
+          <>The current user's organization slug</>
         ],
     },
     {
       cells: [
           <code>organization</code>,
-          <>The current user's organization object</code>
+          <>The current user's organization object</>
         ],
     },
     {
       cells: [
           <code>sessionClaim</code>, 
-          <>The current user's session claim</code>
+          <>The current user's session claim</>
         ],
     },
     {
