fixing missing closing tags

--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -111,8 +111,8 @@ All props below are optional.
     },
     {
       cells: [
-        <code>routing<code>,
-        <code>string<code>,
+        <code>routing</code>,
+        <code>string</code>,
         <>The routing strategy for your pages. Supported values are: 
           <ul>
             <li>hash (default): Hash-based routing.</li>
