--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -1,3 +1,8 @@
+---
+title: Account Portal
+description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
+---
+
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 
