update trpc content

--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -15,7 +15,7 @@ Learn how to integrate Clerk into your Next.js application using TRPC. TRPC can 
 
 <Steps>
 
-### Install @clerk/nextjs
+### Install `@clerk/nextjs`
 
 Clerk's Next.js SDK gives you access to prebuilt components and hooks, as well as our helpers for Next.js API routes, server-side rendering, and middleware.
 
@@ -35,7 +35,7 @@ Clerk's Next.js SDK gives you access to prebuilt components and hooks, as well a
 
 ### Set environment keys
 
-Two environment variables for Clerk's SDK need to be set. Below is an example of an `.env.local` file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
+Below is an example of an `.env.local` file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
 
 <InjectKeys>
 
@@ -68,7 +68,7 @@ export const config = {
 
 ## Using Clerk in your TRPC Context
 
-To use Clerk in your TRPC context, you will need to use our server helper `getAuth`.
+To use Clerk in your TRPC context, you will need to use our server helper [`getAuth`](/docs/references/nextjs/get-auth).
 
 ```ts
 import * as trpc from '@trpc/server';
