docs: update link referencing authMiddleware (#164)

--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -1,3 +1,8 @@
+---
+title: Account Portal
+description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
+---
+
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 
@@ -11,7 +16,7 @@ The Account Portal offers a comprehensive solution for managing user authenticat
 
 To use the Account Portal, add Clerk to your application and protect your pages. Any time an unauthenticated user attempts to access a protected page in your application, they will automatically get redirected to the Account Portal pages to Sign in.
 
-Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](/docs/references/nextjs/with-clerk-middleware), React [Control Components](docs/components/overview) or [ClerkJS SDK](/docs/references/javascript/overview).
+Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](/docs/references/nextjs/auth-middleware), React [Control Components](docs/components/overview) or [ClerkJS SDK](/docs/references/javascript/overview).
 
 
 # Features overview
