use correct capitalization for tRPC

--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -1,11 +1,11 @@
 ---
-title: Using TRPC
-description: Learn how to integrate Clerk into your Next.js application using TRPC. TRPC can be used with Clerk, but requires a few tweaks from a traditional Clerk + Next.js setup.
+title: Using tRPC and Next.js
+description: Learn how to integrate Clerk into your Next.js application using tRPC. tRPC can be used with Clerk, but requires a few tweaks from a traditional Clerk + Next.js setup.
 ---
 
-# Using TRPC
+# Using tRPC and Next.js
 
-Learn how to integrate Clerk into your Next.js application using TRPC. TRPC can be used with Clerk, but requires a few tweaks from a traditional Clerk + Next.js setup.
+Learn how to integrate Clerk into your Next.js application using [tRPC](https://trpc.io/). tRPC can be used with Clerk, but requires a few tweaks from a traditional Clerk + Next.js setup.
 
 <Callout>
   Prefer to get started quickly? Check out the following [repo](https://github.com/perkinsjr/t3-app-clerk-minimal) which implements the essentials.
@@ -66,9 +66,9 @@ export const config = {
 
 </Steps>
 
-## Using Clerk in your TRPC Context
+## Using Clerk in your tRPC Context
 
-To use Clerk in your TRPC context, you will need to use our server helper [`getAuth`](/docs/references/nextjs/get-auth).
+To use Clerk in your tRPC context, you will need to use our server helper [`getAuth`](/docs/references/nextjs/get-auth).
 
 ```ts
 import * as trpc from '@trpc/server';
@@ -111,7 +111,7 @@ export const exampleRouter = router({
 })
 ```
 
-## Using TRPC Middleware
+## Using tRPC Middleware
 
 In most cases, you need to protect your routes from users who aren't signed in. You can create a protected procedure.
 
