update the /references/react hooks pages to use consistent syntax

--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -1,6 +1,6 @@
 ---
 title: useSessionList()
-description: The `useSessionList` hook provides returns an array of Session objects that have been registered on the client device.
+description: The `useSessionList` hook returns an array of Session objects that have been registered on the client device.
 ---
 
 import { Callout } from "nextra-theme-docs";
@@ -9,7 +9,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `useSessionList()`
 
-The `useSessionList` hook provides returns an array of Session objects that have been registered on the client device.
+The `useSessionList` hook returns an array of `Session` objects that have been registered on the client device.
 
 ## Usage
 
