--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -1,6 +1,6 @@
 ---
 title: useSignIn()
-description: The `useSignIn` hook gives you access to the SignIn object, which allows you to check the current state of a sign in and sign in users with custom flows.
+description: The `useSignIn` hook provides access to the SignIn object, which allows you to check the current state of a sign in and sign in users with custom flows.
 ---
 
 import { Tab, Tabs } from "nextra-theme-docs";
@@ -9,7 +9,7 @@ import { Tables } from "@/components/Table";
 
 # `useSignIn()`
 
-The `useSignIn` hook gives you access to the SignIn object, which allows you to check the current state of a sign in and sign in users with custom flows.
+The `useSignIn` hook provides access to the `SignIn` object, which allows you to check the current state of a sign in. This is also useful for creating a custom sign in flow.
 
 ## Usage
 
