--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -9,7 +9,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `useSession()`
 
-The `useSession` hook provides access to the the current user Session object, and helpers to set the active session.
+The `useSession` hook provides access to the current user's `Session` object, as well as helpers for setting the active session.
 
 ## Usage
 
