--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -8,7 +8,7 @@ import { Tables } from "@/components/Table";
 
 # `useSignUp()`
 
-The `useSignUp` hook gives you access to the SignUp object, which allows you to check the current state of a sign up and sign up users with custom flows.
+The `useSignUp` hook gives you access to the `SignUp` object, which allows you to check the current state of a sign up. This is also useful for creating a custom sign up flow.
 
 ## Usage
 
