update comopnent reference links to navigate to correct docs links

--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -7,7 +7,7 @@ description:
 
 Clerk Next.js is a wrapper around Clerk React. It is the recommended way to integrate Clerk into your React application if you are using Next.js.
 
-Clerk Next.js provides React implementations of Clerk [Components](/docs/components/overview); highly customizable, pre-built components that you can use to build beautiful user management applications. You can find display components for building [sign in](/components/sign-in), [sign up](/components/sign-up), [account switching](/components/user-button) and [user profile management](/components/user-profile) pages as well as flow [control components](/docs/components/control/authenticate-with-callback) that act as helpers for implementing a seamless authentication experience.
+Clerk Next.js provides React implementations of Clerk [Components](/docs/components/overview); highly customizable, pre-built components that you can use to build beautiful user management applications. You can find display components for building [sign in](/components/authentication/sign-in), [sign up](/components/authentication/sign-up), [account switching](/components//user/user-button) and [user profile management](/components/user/user-profile) pages as well as flow [control components](/docs/components/control/authenticate-with-callback) that act as helpers for implementing a seamless authentication experience.
 
 If pre-built components don't meet your specific needs, Clerk comes loaded with custom [hooks](/docs/references/react/use-user). These hooks give you access to the Clerk object, and a set of useful helper methods for [building custom sign in and sign up flows](/docs/custom-flows/overview).
 
