--- a/docs/quickstarts/gatsby.mdx
+++ b/docs/quickstarts/gatsby.mdx
@@ -33,7 +33,7 @@ Once you have a React application ready, you need to install Clerk's React SDK. 
 
 ### Set environment keys
 
-Below is an example of an .env.development file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
+Below is an example of your `.env.development` file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
 
 <InjectKeys>
 
@@ -44,11 +44,11 @@ CLERK_SECRET_KEY={{secret}}
 
 </InjectKeys>
 
-### Update `gatsby.config.ts`
+### Update `gatsby-config.ts`
 
-To use Clerk, you will need to update your `gatsby.config.ts` to resolve the `gatsby-plugin-clerk` and load from `.env` files.
+To use Clerk, you will need to update your `gatsby-config.ts` in order to resolve `gatsby-plugin-clerk` and load from `.env` files.
 
-```ts filename="gatsby.config.js"" copy
+```ts filename="gatsby-config.ts" copy
 import type { GatsbyConfig } from "gatsby"
 
 require("dotenv").config({
@@ -59,9 +59,7 @@ const config: GatsbyConfig = {
     title: `clerk-test`,
     siteUrl: `https://www.yourdomain.tld`,
   },
-  graphqlTypegen: true,
-
-  // add gatsby plugin
+  // Add Gatsby plugin
   plugins: [
     {
       resolve: `gatsby-plugin-clerk`
@@ -74,9 +72,9 @@ export default config
 
 ### Protecting your pages
 
-Clerk offers Control Components that allow you to protect your pages. Below is an example using Clerk's hosted components and the `<SignedIn/>` and `<SignedOut/>` control components.
+Clerk offers Control Components that allow you to protect your pages. Below is an example using Clerk's hosted components and the `<SignedIn />` and `<SignedOut />` control components.
 
-```tsx filename="index.tsx" copy
+```tsx filename="src/pages/index.tsx" copy
 import React from 'react'
 import {
   SignIn,
@@ -109,7 +107,7 @@ Clerk provides a set of hooks and helpers that you can use to access the active 
 
 The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
-```tsx copy filename="pages/example.tsx"
+```tsx copy filename="src/pages/example.tsx"
 import { useAuth } from "gatsby-plugin-clerk";
 
 export default function Example() {
@@ -132,7 +130,7 @@ export default function Example() {
 
 The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
-```tsx copy filename="pages/example.tsx"
+```tsx copy filename="src/pages/example.tsx"
 import { useUser } from "gatsby-plugin-clerk";
 
 export default function Example() {
@@ -148,7 +146,7 @@ export default function Example() {
 
 ### SSR usage
 
-```tsx copy filename="pages/SSRPage.tsx"
+```tsx copy filename="src/pages/SSRPage.tsx"
 import * as React from 'react';
 import { GetServerData } from 'gatsby';
 import { withServerAuth } from 'gatsby-plugin-clerk/ssr';
