--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -150,7 +150,7 @@ fastify.get("/protected", async (request, reply) => {
     return reply.code(403).send();
   }
 
-  const user = userId ? await clerkClient.users.getUser(userId) : null;
+  const user = await clerkClient.users.getUser(userId);
   return { user };
 });
 ```
@@ -183,7 +183,7 @@ const protectedRoutes: FastifyPluginCallback = (instance, opts, done) => {
       return reply.code(403).send();
     }
 
-    const user = userId ? await clerkClient.users.getUser(userId) : null;
+    const user = await clerkClient.users.getUser(userId);
     return { user };
   });
   done();
