update nextjs overview content

--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -13,7 +13,7 @@ The authMiddleware() helper integrates Clerk authentication into your Next.js ap
 
 ## App Router
 
-Clerk provides many helpers that are optimized specifically for Next.js's App Router.
+Clerk Next.js provides many helpers that are optimized specifically for Next.js's App Router.
 
 - [`auth()`](/docs/references/nextjs/auth)
 - [`currentUser()`](/docs/references/nextjs/current-user)
@@ -22,7 +22,7 @@ Clerk provides many helpers that are optimized specifically for Next.js's App Ro
 
 ## Pages Router
 
-Clerk also provides client side helpers, such as
+Clerk Next.js also provides client side helpers, such as
 
 - [`getAuth()`](/docs/references/nextjs/get-auth)
 - [`buildClerkProps()`](/docs/references/nextjs/build-clerk-props)
