--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -29,5 +29,6 @@ Clerk Next.js also provides client side helpers, such as
 
 ## Other useful resources
 
-- [Authentication Object](/docs/references/nextjs/authentication-object)
-- [withClerkMiddleware()](/docs/references/with-clerk-middleware) - will soon be deprecated in favor of `authMiddleware()`
+- [`Authentication` Object](/docs/references/nextjs/authentication-object)
+- [Using tRPC](/docs/references/nextjs/trpc)
+- [`withClerkMiddleware()`](/docs/references/with-clerk-middleware) - will soon be deprecated in favor of `authMiddleware()`
