update nextjs overview content

--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -29,6 +29,6 @@ Clerk Next.js also provides client side helpers, such as
 
 ## Other useful resources
 
-- [`Authentication` Object](/docs/references/nextjs/authentication-object)
+- [Authentication Object](/docs/references/nextjs/authentication-object)
 - [Using tRPC](/docs/references/nextjs/trpc)
 - [`withClerkMiddleware()`](/docs/references/with-clerk-middleware) - will soon be deprecated in favor of `authMiddleware()`
