--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -9,11 +9,11 @@ Clerk makes it simple to add authentication to your Next.js application. Looking
 
 ## `authMiddleware()`
 
-The authMiddleware() helper integrates Clerk authentication into your Next.js application through middleware. It's an important step in setting up your application. By default, Clerk's authMiddleware() treats all routes as private if the middleware runs. If you need to make specific routes public, you can learn more [here](/docs/references/nextjs/auth-middleware).
+The `authMiddleware()` helper integrates Clerk authentication into your Next.js application through middleware. It allows you to integrate authorization into both the client and server of your application. You can learn more [here](/docs/references/nextjs/auth-middleware).
 
 ## App Router
 
-Clerk Next.js provides many helpers that are optimized specifically for Next.js's App Router.
+Clerk provides first-class support for the [Next.js App Router](https://nextjs.org/docs/app). The below methods and references show how to integrate Clerk features into applications that take advantage of the latest App Router and React Server Components features.
 
 - [`auth()`](/docs/references/nextjs/auth)
 - [`currentUser()`](/docs/references/nextjs/current-user)
@@ -22,13 +22,11 @@ Clerk Next.js provides many helpers that are optimized specifically for Next.js'
 
 ## Pages Router
 
-Clerk Next.js also provides client side helpers, such as
+Clerk continues to provide drop-in support for the Next.js Pages Router. In addition to the main Clerk integration, several methods are available for instrumenting authentication within Pages Router-based applications.
 
 - [`getAuth()`](/docs/references/nextjs/get-auth)
 - [`buildClerkProps()`](/docs/references/nextjs/build-clerk-props)
 
 ## Other useful resources
 
-- [Authentication Object](/docs/references/nextjs/authentication-object)
 - [Using tRPC](/docs/references/nextjs/trpc)
-- [`withClerkMiddleware()`](/docs/references/with-clerk-middleware) - will soon be deprecated in favor of `authMiddleware()`
