--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -351,9 +351,9 @@ export default async function handler(
 
     #### **`auth()`**
 
-    Clerk has introduced a new [`auth()`](/docs/references/nextjs/auth) helper that returns the same `Authentication` Object as `getAuth(req)` in middleware, getServerSideProps, and API routes.
+    Clerk has introduced a new [`auth()`](/docs/references/nextjs/auth) helper that returns the same [`Authentication` Object](/docs/references/nextjs/authentication-object) as [`getAuth(req)`](/docs/references/nextjs/get-auth) in middleware, getServerSideProps, and API routes.
 
-    Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a Request object to Clerk
+    Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
 
     ```tsx copy filename="app/page.tsx"
     import { auth } from '@clerk/nextjs/app-beta';
