add callout for differentiating between nextjs and nodejs

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -7,6 +7,10 @@ description:
 
 Placeholder text: By leveraging the Clerk Backend API, you can easily access and update data...
 
+<Callout>
+  The backend API is accessible through the `clerkClient` object if you are using Next.js, or the `clerk` object if you are using Node.js.
+</Callout>
+
 ## User Object
 
 User operations are exposed by the users sub-api `(clerkClient.users)`. The following methods are available:
