docs: add nextjs overview content; update the format of the quickstarts/nextjs content (#166)
Co-authored-by: Bryce Kalow <bryce@clerk.dev>
Co-authored-by: Braden Sidoti <braden@clerk.dev>
Co-authored-by: Shehzad Akbar <akbar.shehzad@gmail.com>

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -22,7 +22,9 @@ By the end of this guide, you will have installed the following user functionali
 - Manage account
 - Sign out
 
-## Install `@clerk/nextjs`
+<Steps>
+
+### Install `@clerk/nextjs`
 
 Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as our helpers for Next.js API routes, server-side rendering, and middleware.
 
@@ -40,7 +42,7 @@ Once you have a Next.js application ready, you need to install Clerk's Next.js S
   ```
 </CodeBlockTabs>
 
-## Set environment keys
+### Set environment keys
 
 Below is an example of an `.env.local` file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
 
@@ -53,7 +55,7 @@ CLERK_SECRET_KEY={{secret}}
 
 </InjectKeys>
 
-## Mount `<ClerkProvider />`
+### Mount `<ClerkProvider />`
 
 Update your root layout to include the [`<ClerkProvider />`](/docs/components/clerk-provider#clerk-provider) wrapper. The `<ClerkProvider />` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider />` wraps the `<body/>` to enable the context to be accessible anywhere within the app.
 
@@ -98,7 +100,7 @@ export default MyApp;
   The root layout is a server component. If you plan to use the `<ClerkProvider />` outside the root layout, it will need to be a server component as well.
 </Callout>
 
-## Protect your application
+### Protect your application
 
 Now that Clerk is installed and mounted in your application, it’s time to decide which pages are public and which need to hide behind authentication. We do this by creating a `middleware.ts` file at the root folder (or inside `src/` if that is how you set up your app).
 
@@ -125,13 +127,13 @@ With this middleware, your entire application is protected. If you try to access
 </Callout>
 
 
-## Build your own sign in and sign up pages
+### Build your own sign in and sign up pages
 
 In addition to the Account Portal, Clerk also offers a set of [prebuilt components](/docs/components/overview) that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />` and `<SignUp />` components by utilizing the Next.js optional catch-all route.
 
 
 
-### Build your sign up page
+#### Build your sign up page
 
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
@@ -152,7 +154,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
   ```
 </CodeBlockTabs>
 
-### Build your sign in page
+#### Build your sign in page
 
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
@@ -178,7 +180,7 @@ In addition to the Account Portal, Clerk also offers a set of [prebuilt componen
 </Callout>
 
 
-### Update your environment variables 
+#### Update your environment variables 
 
 Next, add environment variables for the `signIn`, `signUp`, `afterSignUp`, and `afterSignIn` paths:
 
@@ -191,7 +193,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 These values control the behavior of the components when you sign in or sign up and when you click on the respective links at the bottom of each component.
 
-## Embed the `<UserButton />`
+### Embed the `<UserButton />`
 
 The [`<UserButton />`](/docs/users/user-button) allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
 
@@ -226,11 +228,11 @@ export default function Example() {
 ```
 </CodeBlockTabs>
 
-## Sign up for your application
+### Sign up for your application
 
 Now start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
 
-
+</Steps>
 
 ## Read session and user data
 
@@ -349,9 +351,9 @@ export default async function handler(
 
     #### **`auth()`**
 
-    Clerk has introduced a new [`auth()`](/docs/references/nextjs/auth) helper that returns the same `Authentication` Object as `getAuth(req)` in middleware, getServerSideProps, and API routes.
+    Clerk has introduced a new [`auth()`](/docs/references/nextjs/auth) helper that returns the same [`Authentication` Object](/docs/references/nextjs/authentication-object) as [`getAuth(req)`](/docs/references/nextjs/get-auth) in middleware, getServerSideProps, and API routes.
 
-    Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a Request object to Clerk
+    Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a `Request` object to Clerk.
 
     ```tsx copy filename="app/page.tsx"
     import { auth } from '@clerk/nextjs/app-beta';
