update get-user-list content

--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -20,6 +20,75 @@ const sessions = await clerkClient.users.getUserList({
 });
 ```
 
+## UserListParams
+
+<Tables 
+  headings={["Param", "Type", "Description"]}
+  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
+  rows={[ 
+    {
+      cells: [
+        <code>limit</code>,
+        <code>number</code>,
+        <>The number of results to return.</>
+      ],
+      cells: [
+        <code>offset</code>,
+        <code>number</code>,
+        <>The number of results to skip.</>
+      ],
+      cells: [
+        <code>orderBy</code>,
+        <code>created_at | updated_at</code>,
+        <>
+          The field to order by. 
+          <br/>Prefix with a `-` to reverse the order. 
+          <br/>Prefix with a `+` to list in ascending order.
+        </>
+      ],
+      cells: [
+        <code>emailAddress</code>,
+        <code>string[]</code>,
+        <>The email addresses to filter by.</>
+      ],
+      cells: [
+        <code>phoneNumber</code>,
+        <code>string[]</code>,
+        <>The phone numbers to filter by.</>
+      ],
+      cells: [
+        <code>username</code>,
+        <code>string[]</code>,
+        <>The usernames to filter by.</>
+      ],
+      cells: [
+        <code>web3Wallet</code>,
+        <code>string[]</code>,
+        <>The web3Wallets to filter by.</>
+      ],
+      cells: [
+        <code>query</code>,
+        <code>string</code>,
+        <>The string to query by.</>
+      ],
+      cells: [
+        <code>userId</code>,
+        <code>string[]</code>,
+        <>The user ids to filter by.</>
+      ],
+      cells: [
+        <code>externalId</code>,
+        <code>string[]</code>,
+        <>The external ids to filter by.</>
+      ]
+    }
+  ]}
+/>
+
+## Examples
+
+### `getUserList({ emailAddress, phoneNumber })`
+
 Retrieves user list that is filtered by the given email addresses and phone numbers:
 
 ```tsx
@@ -30,6 +99,8 @@ const phoneNumber = ['+12025550108'];
 // If these filters are included, the response will contain only users that own any of these emails and/or phone numbers.
 const sessions = await clerkClient.users.getUserList({ emailAddress, phoneNumber });
 ```
+
+### `getUserList({ query })`
 
 To do a broader match through a list of fields, you can use the query parameter which partially matches the fields: userId, emailAddress, phoneNumber, username, web3Wallet, firstName and lastName.
 
