update get-user-list content

--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -23,7 +23,7 @@ const sessions = await clerkClient.users.getUserList({
 ## UserListParams
 
 <Tables 
-  headings={["Param", "Type", "Description"]}
+  headings={["Name", "Type", "Description"]}
   headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[ 
     {
@@ -32,11 +32,15 @@ const sessions = await clerkClient.users.getUserList({
         <code>number</code>,
         <>The number of results to return.</>
       ],
+    },
+    {
       cells: [
         <code>offset</code>,
         <code>number</code>,
         <>The number of results to skip.</>
       ],
+    },
+    {
       cells: [
         <code>orderBy</code>,
         <code>created_at | updated_at</code>,
@@ -46,36 +50,50 @@ const sessions = await clerkClient.users.getUserList({
           <br/>Prefix with a `+` to list in ascending order.
         </>
       ],
+    },
+    {
       cells: [
         <code>emailAddress</code>,
         <code>string[]</code>,
         <>The email addresses to filter by.</>
       ],
+    },
+    {
       cells: [
         <code>phoneNumber</code>,
         <code>string[]</code>,
         <>The phone numbers to filter by.</>
       ],
+    },
+    {
       cells: [
         <code>username</code>,
         <code>string[]</code>,
         <>The usernames to filter by.</>
       ],
+    },
+    {
       cells: [
         <code>web3Wallet</code>,
         <code>string[]</code>,
         <>The web3Wallets to filter by.</>
       ],
+    },
+    {
       cells: [
         <code>query</code>,
         <code>string</code>,
         <>The string to query by.</>
       ],
+    },
+    {
       cells: [
         <code>userId</code>,
         <code>string[]</code>,
         <>The user ids to filter by.</>
       ],
+    },
+    {
       cells: [
         <code>externalId</code>,
         <code>string[]</code>,
