update get-user-list content

--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -20,7 +20,7 @@ const sessions = await clerkClient.users.getUserList({
 });
 ```
 
-## UserListParams
+## `UserListParams`
 
 <Tables 
   headings={["Name", "Type", "Description"]}
