update get-user-list content

--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -44,8 +44,7 @@ const sessions = await clerkClient.users.getUserList({
       cells: [
         <code>orderBy</code>,
         <code>created_at | updated_at</code>,
-        <>
-          The field to order by. 
+        <>The field to order by. 
           <br/>Prefix with a `-` to reverse the order. 
           <br/>Prefix with a `+` to list in ascending order.
         </>
